<resources>
    <string name="app_name" translatable="false">Weather</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="api_key" translatable="false">07dba8040acd2433773743ed99bbcbbb</string>
    <string name="moscow_id" translatable="false">524901</string>
    <string name="impossible_to_get_weather">Impossible to get weather</string>
    <string name="moscow">Moscow</string>
    <string name="impossible_convert_data">Не удалось сконвертировать данные</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="wind">&#xf021;</string>
    <string name="pressure">&#xf079;</string>
    <string name="humidity">&#xf04e;</string>
    <string name="temp" translatable="false">&#xf053;</string>

    <string name="celsius" translatable="false"> °C</string>
    <string name="farengates" translatable="false"> °F</string>
    <string name="hpa"> hPa</string>
    <string name="mmhg"> mmHg</string>
    <string name="percents" translatable="false"> %</string>
    <string name="msec"> m/s</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_45_min">45 min</string>
    <string name="_3_hour">3 hours</string>
    <string name="_1_hour">1 hour</string>
    <string name="weather_update">Weather update</string>
    <string name="dont_update">Do not update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
